--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,12 +1,12 @@
-<html>
-
+<!DOCTYPE html>>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>Registration Output</title>
 </head>
 
 <body>
-	"no_of_rows_parsed":"[Number]",
-	"no_of_rows_failed":"[number]",
+	"no_of_rows_parsed":<label th:text="${noOfRowsParsed}"></label>
+	"no_of_rows_failed":<label th:text="${noOfRowsFailed}"></label>
 	"error_file_url": "[URL]"
 </body>
 
