--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 <body>
 	"no_of_rows_parsed":<label th:text="${noOfRowsParsed}"></label>
 	"no_of_rows_failed":<label th:text="${noOfRowsFailed}"></label>
-	"error_file_url": "[URL]"
+	"error_file_url": <a th:href="${url}"></a>
 </body>
 
 </html>
